--- a/app/src/main/res/layout/device_adapter_view.xml
+++ b/app/src/main/res/layout/device_adapter_view.xml
@@ -7,13 +7,14 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/deviceName"
+        android:id="@+id/tvDeviceName"
         android:textSize="15sp"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/deviceAddress"
+        android:id="@+id/tvDeviceAddress"
         android:textSize="15sp"/>
+
 
 </LinearLayout>
